--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,19 +20,31 @@
       <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
           <div class="container">
+            {% if current_user.username %}
             <a class="navbar-brand mr-4" href="{{ url_for('main.index') }}">Flask Blog</a>
+            {% else %}
+            <a class="navbar-brand mr-4" href="{{ url_for('auth.login') }}">Flask Blog</a>
+            {% endif %}
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarToggle">
               <div class="navbar-nav mr-auto">
+                {% if current_user.username %}
                 <a class="nav-item nav-link" href="{{ url_for('main.index') }}">Home</a>
                 <a class="nav-item nav-link" href="{{ url_for('main.about') }}">About</a>
+                <a class="nav-item nav-link" href="{{ url_for('main.account') }}">Account</a>
+                {% endif %}
               </div>
               <!-- Navbar Right Side -->
               <div class="navbar-nav">
+                {% if current_user.is_anonymous %}
                 <a class="nav-item nav-link" href="{{ url_for('auth.login') }}">Login</a>
                 <a class="nav-item nav-link" href="{{ url_for('auth.register') }}">Register</a>
+                {% endif %}
+                {% if current_user.is_authenticated %}
+                <a class="nav-item nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
+                {% endif %}
               </div>
             </div>
           </div>
