--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,7 +33,6 @@
                 {% if current_user.username %}
                 <a class="nav-item nav-link" href="{{ url_for('main.index') }}">Home</a>
                 <a class="nav-item nav-link" href="{{ url_for('main.about') }}">About</a>
-                <a class="nav-item nav-link" href="{{ url_for('main.account') }}">Account</a>
                 {% endif %}
               </div>
               <!-- Navbar Right Side -->
@@ -43,6 +42,7 @@
                 <a class="nav-item nav-link" href="{{ url_for('auth.register') }}">Register</a>
                 {% endif %}
                 {% if current_user.is_authenticated %}
+                <a class="nav-item nav-link" href="{{ url_for('main.account') }}">Account</a>
                 <a class="nav-item nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
                 {% endif %}
               </div>
@@ -69,10 +69,10 @@
               <h3>Our Sidebar</h3>
               <p class='text-muted'>You can put any information here you'd like.
                 <ul class="list-group">
-                  <li class="list-group-item list-group-item-dark">Latest Posts</li>
-                  <li class="list-group-item list-group-item-dark">Announcements</li>
-                  <li class="list-group-item list-group-item-dark">Calendars</li>
-                  <li class="list-group-item list-group-item-dark">etc</li>
+                  <li class="list-group-item list-group-item-light">Latest Posts</li>
+                  <li class="list-group-item list-group-item-light">Announcements</li>
+                  <li class="list-group-item list-group-item-light">Calendars</li>
+                  <li class="list-group-item list-group-item-light">etc</li>
                 </ul>
               </p>
             </div>
