--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -42,6 +42,7 @@
                 <a class="nav-item nav-link" href="{{ url_for('auth.register') }}">Register</a>
                 {% endif %}
                 {% if current_user.is_authenticated %}
+                <a class="nav-item nav-link" href="{{ url_for('main.new_post') }}">New Post</a>
                 <a class="nav-item nav-link" href="{{ url_for('main.account') }}">Account</a>
                 <a class="nav-item nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
                 {% endif %}
